--- a/basic-browser-oauth/index.html
+++ b/basic-browser-oauth/index.html
@@ -22,9 +22,7 @@
 
   <calcite-button id='signInButton'>Sign in</calcite-button>
 
-  <p id="sessionInfo">
-    <!-- Information will be injected here. -->
-  </p>
+  <p id="sessionInfo">  </p>
   
   <pre><code id="sessionCode" style="white-space: pre;"></code></pre>
   
